make line height avoid cropping

--- a/share/spice/similar_sites/similar_sites.css
+++ b/share/spice/similar_sites/similar_sites.css
@@ -13,6 +13,7 @@
 
 .zci--similar_sites .c-list__item a {
     font-size: 1.15em;
+    line-height: 1.2em;
     font-weight: 400;
     vertical-align: middle;
     margin-left: 10px;
